# cuBrief

./: README.md
shared_memory/: CMakeCache.txt  cmake_install.cmake  dog_cuda.cu  dog_cuda.cu_  filter.cu_incl  filter.cu_incl.1d.unroll  test_dog.cpp  tester
shared_memory_with_descriptor/: CMakeCache.txt  CMakeLists.txt  Makefile  dog_cuda.cu  dog_serial.cpp  filter.cpp  filter.cu_incl  filter.h  test_dog.cpp  test_dog.cpp.2  tester
